# personal_ska

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Dockerfile  KUBECONFIG  LICENSE  Makefile  README.md  dish1  dishlogs  file4.txt  gilab_values.yaml  logs.txt  out  pyproject.toml  test-runner  test1
charts/: file.txt
charts/ska-tmc-dishleafnode/: Chart.yaml  values.yaml
charts/test-parent/: Chart.yaml  values.yaml
data/: iers_file.all
docs/: Makefile
docs/src/: conf.py  index.rst
pogo/: DishLeafNode.xmi
src/dishln_pointing_device/: dishln_pointing_device.py
src/ska_dishln_pointing_device/: __init__.py  dishln_pointing_device.py  event_manager.py
src/ska_tmc_dishleafnode/: __init__.py  auto_stow.py  az_el_converter.py  const.py  constants.py  device_data.py  device_info.py  dish_leaf_node.py  enums.py  release.py  utils.py
tests/: callback.py  conftest.py  mock_callable.py  pytest.ini  settings.py
tests/acceptance/: test_dishleafnode.py
tests/component/: test_dishln_component_manager.py
tests/data/: delta_configure.json  dishleafnode_configure.json  dishleafnode_configure_adr106.json  dishleafnode_configure_band2.json  dishleafnode_configure_tle_adr63.json  dishleafnode_track.json  dln_configure_pvt.json  global_pointing_model.json  global_pointing_model_faulty.json  global_pointing_model_ska002.json  invalid_key.json  invalid_key_Configure_command.json  invalid_key_track.json  non_sidereal_tracking.json  partial_configure.json  target_data.json
tests/features/: dishleafnode.feature
tests/integration/: SKB-1306-incremental-steps.md  conftest.py  run_level2_probe.sh  skb_1306_fixtures.py  skb_1306_test_devices.py  test_apply_pointing_model.py  test_device_unavailabillity.py  test_dish_ln_pointing_device.py  test_dishln_abort_command.py  test_dishln_band_capability.py  test_dishln_configure_band_command.py  test_dishln_configure_command.py  test_dishln_configure_correction_key.py  test_dishln_configure_error_propogation.py  test_dishln_endscan_command.py  test_dishln_event_receiver.py  test_dishln_forward_backward_transform.py  test_dishln_off_command.py  test_dishln_on_command.py  test_dishln_scan_command.py  test_dishln_set_kvalue_command.py  test_dishln_setoperatemode_command.py  test_dishln_setstandbyfpmode_command.py  test_dishln_setstandbylpmode_command.py  test_dishln_setstowmode_command.py  test_dishln_track_command.py  test_dishln_track_load_static_off_command.py  test_dishln_track_stop_command.py  test_dishln_track_table_error.py  test_dishln_track_table_write_error.py  test_health_info_new.py  test_integration.py  test_is_subsystem_available_diagnostic_skb_1306.py  test_is_subsystem_available_skb_1306.py  test_kvalue_tmc_restart.py  test_programtracktable.py  test_sdpqc_functionality.py  test_skb_467.py  (+5 more)
(+172 files in other folders)
