[tool.poetry]
name = "ska-tmc-dishleafnodes"
version = "0.1.11"
description = "SKA-TMC-DISHLEAFNODES"
authors = ["Team NCRA"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_dishleafnode", from = "src" },
]
include = [
    { path = 'tests'}
]

[tool.poetry.scripts]
DishLeafNodeDS = 'ska_tmc_dishleafnode.dish_leaf_node:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
    {version = "1.21.1", python = ">=3.7,<3.10"},
    {version = "1.23.0", python = "3.10"}
]
pytango = "^9.3.3"
jsonschema = ">=4.0.1"
marshmallow = "^3.14.1"
ska-ser-log-transactions = "0.2.2+ae0f5c92"
ska-tango-testing = "0.4.1"
ipython = "8.5.0"
ska-tmc-cdm = "6.0.4"
fire = "^0.4.0"
ska-tmc-common = "0.1.59"
ska-ser-logging = "^0.4.1"
ska-tango-base = "0.17.0"
astropy = "^5.0.4"
katpoint = "1.0a1"
pytz = "2021.3"

[tool.poetry.dev-dependencies]
black = "22.8.0"
pylint = "^2.12.2"
pytest = "^7.1"
pytest-bdd = "^5.0.0"
pytest-cov = "^2.10.1"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint-junit = "^0.3.2"
coverage = "^6.2"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.4.0"
pytest-repeat = "^0.9.1"
mock = "^4.0.3"
unittest2 = "1.1.0"
datetime = "4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"